# chibi-scheme

./: .gitignore  .gitmodules  .hgignore  AUTHORS  CMakeLists.txt  CONTRIBUTING.md  COPYING  Makefile  Makefile.detect  Makefile.libs  ProjectHome.md  README  README-win32.md  README.libs  README.md  RELEASE  TODO  VERSION  appveyor.yml  bignum.c  chibi-gdb  chibi-scheme.SlackBuild  chibi-scheme.pc.in  chibi-scheme.vcproj  config.h  config.scm  configure  debug.c  defaults.h  eval.c  eval.h  fedora.spec  gc.c  gc_heap.c  gc_heap.h  init.scm  main.c  make_slackware_package.bash  mkfile  opcodes.c  (+8 more)
.githooks/: pre-commit  update
.github/workflows/: CI.yaml
benchmarks/gabriel/: chibi-prelude.scm  difftimes.sh  graphs.sch  maze.sch  maze2.sch  puzzle.sch  ray.scm  run.sh
benchmarks/shootout/: binarytrees.chibi  chameneos-redux.chibi  knucleotide.chibi
contrib/: bash_completion  chibi-generate-install-meta-helper.cmake  chibi-genstatic-helper.cmake  chibi-scheme-config.cmake  chibi-scheme.pc.cmake.in  scheme-keywords.el
data/: .gitignore  .hgignore
doc/: chibi-doc.1  chibi-ffi.1  chibi-scheme.1  chibi.scrbl  chibi_make_pdf_htmldoc.sh  chibi_make_pdf_pandoc.sh
examples/: echo-server-inet6.scm  echo-server-udp.scm  echo-server.scm  hello.scm  repl-server.scm  simple-http-client.scm  simple-http-server.scm
include/chibi/: bignum.h  config.h  eval.h  features.h  gc_heap.h  install.h.in  sexp-huff.h  sexp-hufftabdefs.h  sexp.h
js/: exported_functions.json  index.html  post.js  pre.js
lib/: config.scm  init-7.scm  init.scm  meta-7.scm  meta.scm
lib/chibi/: accept.c  app-test.sld  app.scm  app.sld  apropos.scm  apropos.sld  assert-test.sld  assert.sld  ast.c  ast.module  ast.scm  ast.sld  base64-test.sld  base64.module  base64.scm  base64.sld  binary-record-chicken.scm  binary-record-test.sld  binary-record.scm  binary-record.sld  binary-types.scm  bytevector-test.sld  bytevector.scm  bytevector.sld  channel.scm  channel.sld  char-set.sld  config.scm  config.sld  csv-test.sld  csv.scm  csv.sld  diff-test.sld  diff.scm  diff.sld  disasm.c  disasm.module  disasm.sld  doc-test.sld  doc.scm  (+153 more)
lib/gleckler/: hamt-map-test.scm  hamt-map-test.sld  hamt-map.scm  hamt-map.sld  hamt-misc-test.sld  hamt-misc.scm  hamt-misc.sld  hamt-test.scm  hamt-test.sld  hamt.scm  hamt.sld  vector-edit-test.scm  vector-edit-test.sld  vector-edit.scm  vector-edit.sld
lib/nieper/: rbtree.scm  rbtree.sld
lib/rnrs/: base.sld  conditions.sld  control.sld  eval.sld  lists.sld  mutable-pairs.sld  mutable-strings.sld  programs.sld  sorting.sld  syntax-case.sld
lib/scheme/: base.sld  bitwise.sld  box.sld  bytevector-test.sld  bytevector.sld  bytevector.stub  case-lambda.sld  char.scm  char.sld  charset.sld  comparator.sld  complex.sld  cxr.scm  cxr.sld  define-values.scm  digit-value.scm  division.scm  division.sld  ephemeron.sld  eval.sld  extras.scm  file.sld  fixnum.sld  flonum.sld  generator.sld  hash-table.sld  ideque.sld  ilist.sld  inexact.scm  inexact.sld  lazy.sld  list-queue.sld  list.sld  load.sld  lseq.sld  mapping.sld  misc-macros.scm  process-context.sld  r5rs.sld  read.sld  (+14 more)
lib/snow/: commands.scm  commands.sld  interface.scm  interface.sld  package.scm  package.sld  snow  utils.scm  utils.sld
lib/srfi/: 1.module  1.sld  101.scm  101.sld  11.module  11.sld  111.sld  113.sld  115.sld  116.sld  117.sld  121.sld  124.sld  125.sld  127.scm  127.sld  128.sld  129.sld  130.scm  130.sld  132.sld  133.sld  134.scm  134.sld  135.scm  135.sld  139.scm  139.sld  14.sld  141.sld  142.sld  143.sld  144.sld  145.sld  146.scm  146.sld  147.sld  151.sld  154.scm  154.sld  (+62 more)
opt/: bignum.c  debug.c  fcall.c  opcode_names.h  plan9-opcodes.c  plan9.c  sexp-huff.c  sexp-hufftabdefs.h  sexp-hufftabs.c  sexp-unhuff.c  simplify.c
tests/: base64-tests.scm  division-tests.scm  filesystem-tests.scm  flonum-tests.scm  generic-tests.scm  hash-tests.scm  io-tests.scm  iset-tests.scm  lib-tests.scm  loop-tests.scm  match-tests.scm  md5-tests.scm  memoize-tests.scm  mime-tests.scm  numeric-tests.scm  parse-tests.scm  path-tests.scm  prime-tests.scm  process-tests.scm  r5rs-tests.scm  r7rs-tests.scm  re-tests.txt  record-tests.scm  regexp-tests.scm  rsa-tests.scm  scribble-test.scm  scribble-tests.scm  sha-tests.scm  show-tests.scm  sort-tests.scm  srfi-1-tests.scm  srfi-16-tests.scm  srfi-193-test.scm  srfi-2-tests.scm  srfi-26-tests.scm  srfi-27-tests.scm  srfi-33-tests.scm  srfi-38-tests.scm  string-tests.scm  syntax-tests.scm  (+12 more)
tests/basic/: test00-fact-3.res  test00-fact-3.scm  test01-apply.res  test01-apply.scm  test02-closure.res  test02-closure.scm  test03-nested-closure.scm  test04-nested-let.scm  test05-internal-define.res  test05-internal-define.scm  test06-letrec.scm  test07-mutation.res  test08-callcc.scm  test09-hygiene.res  test09-hygiene.scm  test10-unhygiene.res  test10-unhygiene.scm
tests/ffi/: arrayinstruct.c  arrayinstruct.stub  ffi-tests.scm
tests/foreign/: apply-loop.c  typeid.c
tests/install/: install-tests.pl  run-install-test.sh
tests/memory/: memory-tests.sh  test00-read-string.err-res  test00-read-string.res  test00-read-string.scm  test01-read-symbol.err-res  test01-read-symbol.res  test01-read-symbol.scm
tests/run/: command-line-tests.sh  test00-p.args  test01-p-short.args  test02-h.args  test02-h.res  test03-q.args  test03-q.res  test04-Q.args  test05-xscheme-r5rs.args  test06-xscheme-base.args  test07-xchibi.args  test08-xchibi-primitive.args  test09-m.args  test10-xscheme-base-m.args  test11-xscheme-r5rs-m.args  test12-xchibi-m.args  test12-xchibi-m.res  test13-A-m.args  test14-R.args  test15-R-args.args  test15-R-args.res  test16-R-r.args  test16-R-r.res  test17-R-r-args.args  test17-R-r-args.res  test18-t.args  test18-t.err-res  test18-t.res  test19-l.args
tools/: chibi-doc  chibi-ffi  chibi-genstatic  chibi-run  chibi-save  extract-case-offsets.scm  extract-special-casing.scm  extract-unicode-props.scm  generate-docs.scm  generate-install-meta.scm  genstatic.scm  genstubs.scm  optimize-char-sets.scm  snow-chibi  snow-chibi-completion.bash  snow-chibi.scm
(+358 files in other folders)
